--- a/css/contact.css
+++ b/css/contact.css
@@ -4,9 +4,7 @@ section#contact {
 section#contact .wrap {
 
 }
-section#contact .wrap h2 {
-
-  color: #fbdfdf;
+section#contact .wrap h3 {
   margin-top: 60px;
   text-align: center;
 }
@@ -24,7 +22,7 @@ section#contact .flex ul li::before{
   height: 40px;
   width: 1000px;
   /*! border-radius: 12%; */
-  background-color: #ed9599;
+  background-color: #fac1ca;
   margin-top: 10px;
   padding-top: 15px;
   transform: translateY(50px);
