--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,26 @@
 @media screen and (max-width:768px){
   /*header*/
+  header .wrap{
+  width: 100%;
+  padding: 0 15px;
+  }
   header h1 a{
-    font-size: calc(30px * 0.7);
+    font-size: calc(30px * 0.5);
+  }
+  header ul{
+  position: fixed;
+  gap: 0;
+  right: 95px;
+  }
+  header ul li a{
+  font-size: calc(18px * 0.8);
+  padding: 0;
+  }
+  .sasun::before{
+    display: none;
+  }
+  header div.wrap > a{
+  position: fixed;
+  right: 15px;
   }
 }
