--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,58 +1,127 @@
 #portfolio{
-  
 }
 #portfolio .wrap{
   
+  display: flex;
 }
-#portfolio .wrap small{
-  
-}
-#portfolio .wrap h3{
-  
-}
-#portfolio .wrap p{
-  
+#portfolio h3{
+  writing-mode: vertical-rl;
   text-align: center;
-  margin-top: 30px;
-  color: #c9ab81;
+  transform: rotate(180deg);
 }
-#portfolio article{
+#portfolio .wrap ul.portfolio{
   
-  margin-top: 30px;
-  margin-left: 85px;
-  margin-right: 85px;
-  padding: 50px 50px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: repeat(7,auto);
+  column-gap: 50px;
+  padding: 0 80px;
 }
-#portfolio article .slide{
-  
-  /*! padding: 30px 60px; */
+#portfolio .wrap ul li{
+  background-color: #cfd4fb;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 20px;
+  width: 374px;
+  height: 100px;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s ease;
 }
-#portfolio article .slide span{
+#portfolio .wrap ul li:nth-child(1){
   
 }
-#portfolio article .flex{
-  
-  width: 100%;
+#portfolio .wrap ul li:nth-child(2){ 
+  grid-column: 2;
+  grid-row: 2;
 }
-#portfolio article .flex ul{
-  
-  width: 100%;
+#portfolio .wrap ul li:nth-child(3){
+  grid-column: 1;
+  grid-row: 3;
 }
-#portfolio article .flex ul li{
-  
-  
-  margin: 0 20px;
+#portfolio .wrap ul li:nth-child(4){
+  grid-column: 2;
+  grid-row: 4;
 }
-#portfolio article .flex ul li img{
-  
-  width: 100%;
+#portfolio .wrap ul li:nth-child(5){
+  grid-column: 1;
+  grid-row: 5;
 }
-#portfolio article .flex ul li small{
-  
+#portfolio .wrap ul li:nth-child(6){
+  grid-column: 2;
+  grid-row: 6;
+}
+#portfolio .wrap ul li:nth-child(7){
+  grid-column: 1;
+  grid-row: 7;
+}
+#portfolio .wrap ul li:nth-child(even)::before{
+  content: "";
   display: block;
-  font-size: 20px;
-  color: #131313;
-  letter-spacing: 0.025em;
-  text-transform: uppercase;
-  margin-top: 30px;
+  border-left: 2px solid #968f8f;
+  width: 2px;
+  height: 600px;
+  position: absolute;
+  left: -40px;
+}
+#portfolio .wrap ul li h4{
+  margin-bottom: 10px;
+  color: #bcacce;
+}
+#portfolio .wrap ul li h5{
+  margin-bottom: 10px;
+  color: #fff;
+}
+#portfolio .wrap ul li h6{
+margin-bottom: 10px;
+color: #fff;
+}
+#portfolio .wrap ul li a{
+  text-align: center;
+  padding: 10px 25px;
+  border: 1px solid #fff;
+  border-radius: 30px;
+  background-color: #fff;
+  transition: 1s;
+}
+#portfolio .wrap ul li a:hover{
+  background-color: transparent;
+}
+#portfolio .wrap ul li .portfolio-image {
+  width: 374px;
+  height: 114px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: none;
+}
+#portfolio .wrap ul li:nth-child(1) .portfolio-image{
+ background-image: url(../img/work1.png);
+}
+#portfolio .wrap ul li:nth-child(2) .portfolio-image{
+ background-image: url(../img/work2.png);
+}
+#portfolio .wrap ul li:nth-child(3) .portfolio-image{
+ background-image: url(../img/work3.png);
+}
+#portfolio .wrap ul li:nth-child(4) .portfolio-image{
+ background-image: url(../img/work4.png);
+}
+#portfolio .wrap ul li:nth-child(5) .portfolio-image{
+ background-image: url(../img/work6.png);
+}
+#portfolio .wrap ul li:nth-child(6) .portfolio-image{
+ background-image: url(../img/work7.png);
+}
+#portfolio .wrap ul li:nth-child(7) .portfolio-image{
+ background-image: url(../img/work8.png);
+}
+.portfolio li.clicked{
+  height: 250px !important;;
+  
+}
+.portfolio li.clicked .portfolio-image{
+  display: block !important;
 }
