--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -98,7 +98,7 @@
 }
 #portfolio .wrap ul li h4{
   margin-bottom: 10px;
-  color: #bcacce;
+  color: #805d37;
 }
 #portfolio .wrap ul li h4:hover{
   color: #fff;
@@ -134,6 +134,7 @@
   height: 114px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position-y: 8px;
   display: none;
 }
 #portfolio .wrap ul li:nth-child(1) .portfolio-image{
