--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -17,7 +17,7 @@
   padding: 0 95px;
 }
 #portfolio .wrap ul li{
-  background-color: #cfd4fb;
+  background-color: #cfddf5;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
