--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,29 +1,128 @@
 @media screen and (max-width:768px){
   /*header*/
-  header .wrap{
+ header .wrap{
   width: 100%;
   }
   header h1 a{
-  font-size: calc(15px * 0.8);
-  }
+    font-size: calc(15px*0.8);
+    }
   header ul{
-  right: 5px;
-  top: 50px;
-  }
+    right: 5px;
+    top: 50px;
+    display: none;
+    }
   header ul li a{
-  font-size: calc(18px * 0.8);
-  padding: 0;
-  }
+    font-size: calc(18px * 0.8);
+    padding: 0;
+    }
   header div.wrap > a{
-  position: fixed;
-  right: 15px;
-  }
-}
+    position: fixed;
+    right: 15px;
+    }
 /*title*/
-#title{
-  
+   #title{  
   padding: 0 15px;
-}
-#title .wrap{
-  
+  margin: 150px 0;
+   }
+  #title .wrap{
+    width: 100%;
+  }
+  #title .left h2{
+    font-size: calc(135px*0.3);
+  }
+  .typed-text-output{
+    font-size: calc(30px*0.5);
+  }
+  #title .wrap .left p{
+    font-size: calc(20px*0.5);
+    margin-top: 20px;
+    white-space: inherit;
+  }
+  #title .wrap .right img{
+    width: 180px;
+    height: 250px;
+  }
+/*about*/
+ section#about{
+  padding: 0 15px;
+  }
+  section#about .wrap{
+  width: 100%;
+  }
+  section#about .wrap h3{
+  font-size: calc(200px*0.4);
+  text-align: center;
+  }  
+  section#about .wrap .infor{
+  padding-left: 0;
+} 
+  section#about small{
+    
+  font-size: calc(22px*0.6);
+  }
+  section#about .wrap .infor ul li{
+    
+  line-height: 2.5;
+  font-size: 15px;
+  }
+  section#about .educate{
+  padding-right: 0;
+  }
+  section#about .educate ul li{
+    
+  line-height: 2.5;
+  font-size: 15px;
+  }
+  section#about .educate ul li span{
+    
+  margin: 0 10px;
+  }
+  /*skill*/
+  #skill{
+  padding: 0 15px;  
+  }
+  #skill .wrap h3{
+    
+  font-size: calc(200px*0.4);
+  }
+  .skill-show{
+  padding: 20px 50px;
+  }
+  /*portfolio*/
+  #portfolio{ 
+  padding: 0 15px;
+  }
+  #portfolio .wrap{
+  width: 100%;
+  }
+  #portfolio h3{
+  font-size: calc(200px*0.4);
+  }
+  #portfolio .wrap ul.portfolio{
+    
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(7,1fr);
+  padding: 0px 15px;
+  }
+  #portfolio .wrap ul li{
+    
+  padding: 10px 5px;
+  width: 100px;
+  height: 50px;
+  }
+  #portfolio .wrap ul li h4{
+   
+  font-size: 18px;
+  }
+  #portfolio .wrap ul li h5{
+  display: none;
+  }
+  #portfolio .wrap ul li h6{
+  font-size: 15px;
+  }
+  #portfolio .wrap ul li a{
+    
+  padding: 0px 10px;
+  margin-top: 30px;
+  }
 }
