--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,14 @@
 @media screen and (max-width:768px){
+  body .circle-2{overflow: hidden;height: 100vw;z-index: 1;}
+  
   /*header*/
  header .wrap{
   width: 100%;
+  justify-content: flex-start;
+  }
+  header h1{
+    
+  margin-left: 50px;
   }
   header h1 a{
     font-size: calc(15px*0.8);
@@ -10,7 +17,6 @@
     right: 170px;
     top: 100px;
     position: absolute;
-    transiton: 1s;
     }
   header ul li a{
     font-size: calc(18px * 0.8);
@@ -18,7 +24,8 @@
     }
   header div.wrap > a{
   display: inherit;
-  transform: translateX(100px) translateY(8px);
+  transform: translateX(100px) translateY(6px);
+  z-index: 1;
     }
   header .wrap .menu{ 
   background-color: #f4d9cb;
@@ -27,12 +34,13 @@
   display: block !important;
   display: none;
   right: -80%;
-  transition: 1s;
+  transition: 1s ease-in-out;
   z-index: 1;
   }
   .showMenu{
   right: 0 !important;
   width: 80% !important;
+  transition: 1s;
   }
   .close{
   display: block;
@@ -45,6 +53,24 @@
   }
   header div.wrap > a .close span:nth-child(3){
   transform:translateY(-10px) rotate(-45deg);
+  }
+  header div.wrap > a span:nth-child(1){
+  transition: 0.5s;
+  }
+  header div.wrap > a span:nth-child(2){
+    transition: 0.01s;
+  }
+  header div.wrap > a span:nth-child(3){
+    transition: 0.5s;
+  }
+  header div.wrap > a.close span:nth-child(1){
+    transform:translateY(10px) rotate(45deg);
+  }
+  header div.wrap > a.close span:nth-child(2){
+     opacity: 0; 
+  }
+  header div.wrap > a.close span:nth-child(3){
+    transform:translateY(-10px) rotate(-45deg);
   }
 /*title*/
    #title{  
@@ -180,16 +206,22 @@
   section#contact h3{
   font-size: calc(200px*0.4);
   }
+  section#contact .wrap .contact-info{margin-left: 20px;margin-top: 20px;}
+  
   section#contact .wrap .contact-info img{
+  width: 200px;
+  }
+  section#contact .wrap .contact-form{  
   display: none;
-  }
-  section#contact .wrap .contact-info h5{
-   
-  }
-  section#contact .wrap .contact-info ul{
+}
+  /*footer*/
+  footer .wrap{ 
+  width: 100%;
+}
+  aside .scroll span a{
     
+  z-index: 1;
   }
-  section#contact .wrap .contact-form{
-   
-  }
+  
+  
 }
