--- a/css/about.css
+++ b/css/about.css
@@ -1,12 +1,13 @@
 section#about{
    padding-left: 50px;
    padding-right: 50px;
-   padding-top: 100px;
-   overflow: hidden;
+   padding-top: 80px;
    position: relative;
+   height: 900px;
 }section#about .wrap{
    
    display: flex;
+   flex-wrap: wrap;
 }
 section#about .wrap h3{
    transition: 1s;
@@ -14,26 +15,37 @@ section#about .wrap h3{
    transform: rotate(180deg);
 }
 section#about .wrap .infor {
-   width: 50%;
-   padding-left: 85px;
+   /*! width: 50%; */
+   background-color: #efd1ce;
+   border-radius: 50px;
+   padding: 50px 50px;
+   /*! transform: rotate(-5deg); */
+   margin-left: 34px;
+   background: linear-gradient(180deg,#ffc683 0%,rgb(238, 238, 236) 100%);
 }
 section#about .wrap .infor ul{
    
 }
 section#about .wrap .infor ul li{
    
-   line-height: 4;
-   white-space: pre-line;
+   line-height: 3.5;
    letter-spacing: 2px;
 }
 section#about .educate{
   
    width: 50%;
-   padding-right: 85px;
+   padding: 50px 50px;
+   height: 50%;
+   background-color: #cfdce4;
+   border-radius: 50px;
+   margin-left: 200px;
+   /*! transform: rotate(-8deg); */
+   background: linear-gradient(180deg,#d2dfe5 0%,rgb(191, 180, 179) 100%);
+   margin-top: 60px;
 }
 section#about small{
    font-size: 22px;
-   color: #e7aaaa;
+   color: #e7aaa8;
    font-weight: 600;
 }
 section#about .educate ul{
@@ -42,11 +54,11 @@ section#about .educate ul{
 }
 section#about .educate ul li{
    line-height: 5;
-   border-top: 1px solid #ccc;
+   border-top: 1px solid #fffbfb;
 }
 section#about .educate ul li:nth-child(3){
    
-   border-bottom: 1px solid #ccc;
+   border-bottom: 1px solid #fff;
 }
 section#about .educate ul li span{
    
@@ -114,6 +126,28 @@ section#about .circle{
    right: -288px;
    box-sizing: border-box;
    overflow: hidden;
+}
+section#about .wrap .intro{
+   
+   background-color: antiquewhite;
+   width: 50%;
+   padding: 50px 50px;
+   border-radius: 50px;
+   transform: translateX(72%) translateY(-255%);
+   background: linear-gradient(180deg,#ffcdcf 0%,rgb(194, 191, 198) 100%);
+   margin-left: 30px;
+}
+section#about .wrap .intro p{
+   
+   line-height: 1.4;
+   letter-spacing: 1px;
+}
+section#about .wrap .intro span{
+   
+   display: inline-block;
+   background-image: url(../img/flower.svg);
+   width: 50px;
+   height: 50px;
 }
 .slidingM{
    transform: translateX(-10px);
