--- a/css/contact.css
+++ b/css/contact.css
@@ -1,30 +1,53 @@
 section#contact {
 
   padding: 100px 0;
+  position: relative;
 }
 section#contact .wrap {
 
   display: flex;
+  padding: 50px 0px;
+  justify-content: space-around;
+  background: linear-gradient(180deg,#fffbf8 0%,rgb(242, 238, 230) 100%);
+  border-radius: 35px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px -3px 0px 0px inset, rgb(255, 255, 255) 0px 0px 0px 2px inset, rgba(0, 0, 0, 0.06) 0px 4px 2px 0px inset, rgba(0, 0, 0, 0.04) 0px 0px 24px 4px inset, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  backdrop-filter: blur(48px);
+  border: 1px solid rgba(0,0,0,0.1);
+  margin-top: 80px;
 }
 section#contact h3{
-  writing-mode: vertical-rl;
-  text-align: center;
-  transform: rotate(180deg);
+  white-space: nowrap;
+  animation: runText linear infinite 50s;
+  position: absolute;
+  top: 0;
+  margin-top: 55px;
+}
+@keyframes runText {
+    0% { left: 100%; } /* Di chuyển chữ về bên phải màn hình */
+    100% { left: -100%; } /* Di chuyển chữ từ bên phải về bên trái */
 }
 section#contact .wrap .contact-info{
-  margin-left: 50px;
+  width: 50%;
+ 
 }
-section#contact .wrap .contact-info h5{
+section#contact .wrap .contact-info .connect{
+  
+}
+section#contact .wrap .contact-info .connect h5{
   
   font-size: 20px;
   margin-top: 25px;
 }
-section#contact .wrap .contact-info img {
-  width: 450px;
-  border-radius: 10%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+section#contact .wrap .contact-info .connect a{
+  
 }
-section#contact .wrap .contact-info ul{
+section#contact .wrap .contact-info .follow{
+  
+}
+section#contact .wrap .contact-info .follow h5{
+  
+}
+section#contact .wrap .contact-info .follow ul{
   margin-top: 50px;
   display: flex;
   justify-content: space-around;
@@ -65,10 +88,7 @@ section#contact .wrap .contact-info ul li a:hover{
 }
 section#contact .wrap .contact-form{
   
-  background-color: #cfddf5;
   border-radius: 20px;
-  width: 30%;
-  margin-left: 215px;
 }
 section#contact .wrap .contact-form form{
   
