--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,167 +1,82 @@
 #portfolio{
+  
 }
 #portfolio .wrap{
   
   display: flex;
 }
-#portfolio h3{
+#portfolio .wrap h3{
+  
   writing-mode: vertical-rl;
-  text-align: end;
   transform: rotate(180deg);
+  text-align: center;
 }
-#portfolio .wrap ul.portfolio{
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: repeat(7,auto);
-  column-gap: 100px;
-  padding: 0 95px;
+#portfolio .wrap ul{
+  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 35px;
+  justify-content: space-evenly;
 }
 #portfolio .wrap ul li{
-  background-color: #cfddf5;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 25px 20px;
-  width: 374px;
-  height: 100px;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.3s ease;
-}
-#portfolio .wrap ul li:nth-child(1){
   
-}
-#portfolio .wrap ul li:nth-child(2){ 
-  grid-column: 2;
-  grid-row: 2;
-}
-#portfolio .wrap ul li:nth-child(3){
-  grid-column: 1;
-  grid-row: 3;
-}
-#portfolio .wrap ul li:nth-child(4){
-  grid-column: 2;
-  grid-row: 4;
-}
-#portfolio .wrap ul li:nth-child(5){
-  grid-column: 1;
-  grid-row: 5;
-}
-#portfolio .wrap ul li:nth-child(6){
-  grid-column: 2;
-  grid-row: 6;
+  width: 450px;
+  height: 340px;
+  border-radius: 25px;
+  box-shadow: 8px 8px 0px #a4a09c;
+  position: relative;
+  cursor: pointer;
+  /*! background-color: #fff9ed; */
 }
 #portfolio .wrap ul li:nth-child(7){
-  grid-column: 1;
-  grid-row: 7;
-}
-#portfolio .wrap ul li:nth-child(even)::before{
-  content: "";
-  display: block;
-  border-left: 2px solid #968f8f;
-  height: 600px;
-  position: absolute;
-  left: -50px;
-}
-#portfolio .wrap ul li:nth-child(even)::after{
-  content: "";
-  display: block;
-  width: 30px;
-  height: 2px;
-  border-top: 2px solid #7e7272;
-  position: absolute;
-  left: -48px;
-}
-#portfolio .wrap ul li:nth-child(odd)::after{
-  content: "";
-  display: block;
-  width: 30px;
-  height: 2px;
-  border-top: 2px solid #7e7272;
-  position: absolute;
-  right: -48px;
-}
-#portfolio .wrap ul li:nth-child(odd)::before{
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 2px solid #7e7272;
-  position: absolute;
-  right: -18px;
-}
-#portfolio .wrap ul li:nth-child(odd):hover::before{
-  background-color: #cfddf5;
+  
+  margin: 0 auto;
 }
 #portfolio .wrap ul li h4{
-  margin-bottom: 10px;
-  color: #805d37;
-}
-#portfolio .wrap ul li h4:hover{
-  color: #fff;
-}
-#portfolio .wrap ul li h5{
-  margin-bottom: 10px;
-  color: #fff;
-}
-#portfolio .wrap ul li h5:hover{
-  color: #bcacce;
-}
-#portfolio .wrap ul li h6{
-  margin-bottom: 10px;
-  color: #fff;
-}
-#portfolio .wrap ul li h6:hover{
-  color: #bcacce;
-}
-#portfolio .wrap ul li a{
+  
   text-align: center;
-  padding: 10px 25px;
-  border: 1px solid #fff;
-  border-radius: 30px;
-  background-color: #fff;
-  transition: 1s;
+  margin-bottom: 25px;
+  color: #e7aaa8;
 }
-#portfolio .wrap ul li a:hover{
-  background-color: transparent;
-  color: #fff;
-}
-#portfolio .wrap ul li .portfolio-image {
-  width: 374px;
-  height: 114px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-y: 8px;
-  display: none;
-}
-#portfolio .wrap ul li:nth-child(1) .portfolio-image{
- background-image: url(../img/work1.png);
-}
-#portfolio .wrap ul li:nth-child(2) .portfolio-image{
- background-image: url(../img/work2.png);
-}
-#portfolio .wrap ul li:nth-child(3) .portfolio-image{
- background-image: url(../img/work3.png);
-}
-#portfolio .wrap ul li:nth-child(4) .portfolio-image{
- background-image: url(../img/work4.png);
-}
-#portfolio .wrap ul li:nth-child(5) .portfolio-image{
- background-image: url(../img/work6.png);
-}
-#portfolio .wrap ul li:nth-child(6) .portfolio-image{
- background-image: url(../img/work7.png);
-}
-#portfolio .wrap ul li:nth-child(7) .portfolio-image{
- background-image: url(../img/work8.png);
-}
-.portfolio li.clicked{
-  height: 250px !important;;
+#portfolio .wrap ul li figure{
   
 }
-.portfolio li.clicked .portfolio-image{
-  display: block !important;
+#portfolio .wrap ul li figure img{
+  
+  max-width: 100%;
+  border-radius: 30px;
+}
+#portfolio .wrap ul li figure figcaption{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: preserve-breaks;
+  opacity: 0;
+  left: 0;
+  flex-direction: column;
+  color: #fff;
+  transform-origin: left top; /* Đặt điểm trung tâm biến đổi */
+  transform: scaleX(0); /* Ẩn phần tử ban đầu */
+  transition: transform 0.5s ease; /* Hiệu ứng transition cho scaleX */
+  line-height: 2;
+  font-size: 20px;
+}
+#portfolio .wrap ul li figure figcaption a{ 
+  display: block;
+  margin-top: 25px;
+  color: #fff;
+  transition: width 0.5s ease;
+}
+#portfolio .wrap ul li figure figcaption a:hover{
+  text-decoration: underline;
+}
+#portfolio .wrap ul li figure figcaption.scaleX{
+  opacity: 1;
+  background-color: #d2dfe5;
+  border-radius: 20px;
+  transform: scaleX(1) !important;
 }
